[ LaTeX backend ] \AgdaIndent no longer takes an argument.

--- a/src/data/agda.sty
+++ b/src/data/agda.sty
@@ -364,7 +364,7 @@
 \newcommand{\AgdaHole}[1]{\colorbox{AgdaHole}{#1}}
 \long\def\AgdaHide#1{\ignorespaces} % Used to hide code from LaTeX.
 
-\newcommand{\AgdaIndent}[1]{$\;\;$}
+\newcommand{\AgdaIndent}{$\;\;$}
 
 % ----------------------------------------------------------------------
 % The code environment.
