--- a/test/LaTeXAndHTML/succeed/Issue1241.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1241.tex
@@ -15,7 +15,7 @@ This is the actual test.
 \\
 \>\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{IsThisCorrectlyLaTeXed} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
