--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.tex
@@ -25,7 +25,7 @@ Text1
 Text2
 
 \begin{code}%
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{Base} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
