--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.tex
@@ -5,10 +5,10 @@
 \begin{code}%
 \>\AgdaKeyword{data} \AgdaDatatype{Nat} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \AgdaSymbol{:} \AgdaDatatype{Nat}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{suc} \AgdaSymbol{:} \AgdaDatatype{Nat} \AgdaSymbol{→} \AgdaDatatype{Nat}\<%
 \\
 %
