--- a/test/LaTeXAndHTML/succeed/UnicodeInput.tex
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.tex
@@ -9,7 +9,7 @@
 \\
 \>\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{→⇒⇛⇉⇄↦⇨↠⇀⇁} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \end{code}
 
