--- a/test/LaTeXAndHTML/succeed/Indenting6.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting6.tex
@@ -5,16 +5,16 @@
 \begin{code}%
 \>\AgdaKeyword{record} \AgdaRecord{Sigma} \AgdaSymbol{(}\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{(}\AgdaBound{B} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{→} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{constructor} \AgdaInductiveConstructor{\_,\_}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaField{proj₁} \AgdaSymbol{:} \AgdaBound{A}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaField{proj₂} \AgdaSymbol{:} \AgdaBound{B} \AgdaField{proj₁}\<%
 \\
 %
@@ -25,14 +25,14 @@
 \begin{code}%
 \>\AgdaKeyword{record} \AgdaRecord{Equiv} \AgdaSymbol{(}\AgdaBound{X} \AgdaBound{Y} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\AgdaSymbol{)} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{field}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaField{to} \<[10]%
 \>[10]\AgdaSymbol{:} \AgdaBound{X} \AgdaSymbol{→} \AgdaBound{Y}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaField{from} \<[10]%
 \>[10]\AgdaSymbol{:} \AgdaBound{Y} \AgdaSymbol{→} \AgdaBound{X}\<%
 \end{code}
