--- a/test/LaTeXAndHTML/succeed/Indenting7.tex
+++ b/test/LaTeXAndHTML/succeed/Indenting7.tex
@@ -7,65 +7,65 @@
 \\
 %
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{module} \AgdaModule{A₁} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{module} \AgdaModule{A₂} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaKeyword{module} \AgdaModule{B₁} \AgdaKeyword{where}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaKeyword{module} \AgdaModule{B₂} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[4]\AgdaIndent{6}{}\<[6]%
+\>[4]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₁} \AgdaKeyword{where}\<%
 \\
-\>[4]\AgdaIndent{6}{}\<[6]%
+\>[4]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₂} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[6]\AgdaIndent{8}{}\<[8]%
+\>[6]\AgdaIndent{}\<[8]%
 \>[8]\AgdaKeyword{module} \AgdaModule{D₁} \AgdaKeyword{where}\<%
 \\
-\>[6]\AgdaIndent{8}{}\<[8]%
+\>[6]\AgdaIndent{}\<[8]%
 \>[8]\AgdaKeyword{module} \AgdaModule{D₂} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaIndent{6}{}\<[6]%
+\>[0]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₃} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{6}{}\<[6]%
+\>[0]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₄} \AgdaKeyword{where}\<%
 \\
 %
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{module} \AgdaModule{A₃} \AgdaKeyword{where}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaKeyword{module} \AgdaModule{B₃} \AgdaKeyword{where}\<%
 \\
-\>[4]\AgdaIndent{6}{}\<[6]%
+\>[4]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₅} \AgdaKeyword{where}\<%
 \\
-\>[6]\AgdaIndent{8}{}\<[8]%
+\>[6]\AgdaIndent{}\<[8]%
 \>[8]\AgdaKeyword{module} \AgdaModule{D₃} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{6}{}\<[6]%
+\>[0]\AgdaIndent{}\<[6]%
 \>[6]\AgdaKeyword{module} \AgdaModule{C₆} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{4}{}\<[4]%
+\>[0]\AgdaIndent{}\<[4]%
 \>[4]\AgdaKeyword{module} \AgdaModule{B₄} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{module} \AgdaModule{A₄} \AgdaKeyword{where}\<%
 \end{code}
 
