--- a/test/LaTeXAndHTML/succeed/Issue1618.tex
+++ b/test/LaTeXAndHTML/succeed/Issue1618.tex
@@ -10,25 +10,25 @@ The let should be properly aligned in the following code:
 \\
 \>\AgdaFunction{id} \AgdaBound{A} \AgdaSymbol{=}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{let}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaBound{id'} \AgdaSymbol{:} \AgdaFunction{B} \AgdaSymbol{→} \AgdaFunction{B}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaBound{id'} \AgdaSymbol{=} \AgdaSymbol{λ} \AgdaBound{a} \AgdaSymbol{→} \AgdaBound{a}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{in} \AgdaBound{id'}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{where}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaFunction{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
-\>[2]\AgdaIndent{4}{}\<[4]%
+\>[2]\AgdaIndent{}\<[4]%
 \>[4]\AgdaFunction{B} \AgdaSymbol{=} \AgdaBound{A}\<%
 \end{code}
 
@@ -40,21 +40,21 @@ keyword, as opposed to on a new line.
 \\
 \>\AgdaFunction{di} \AgdaBound{A} \AgdaSymbol{=}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{let} \<[7]%
 \>[7]\AgdaBound{id'} \AgdaSymbol{:} \AgdaFunction{B} \AgdaSymbol{→} \AgdaFunction{B}\<%
 \\
-\>[2]\AgdaIndent{7}{}\<[7]%
+\>[2]\AgdaIndent{}\<[7]%
 \>[7]\AgdaBound{id'} \AgdaSymbol{=} \AgdaSymbol{λ} \AgdaBound{a} \AgdaSymbol{→} \AgdaBound{a}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{in} \AgdaBound{id'}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaKeyword{where} \<[9]%
 \>[9]\AgdaFunction{B} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\<%
 \\
-\>[2]\AgdaIndent{9}{}\<[9]%
+\>[2]\AgdaIndent{}\<[9]%
 \>[9]\AgdaFunction{B} \AgdaSymbol{=} \AgdaBound{A}\<%
 \end{code}
 \end{document}
