--- a/test/LaTeXAndHTML/succeed/Issue2019.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.tex
@@ -10,15 +10,15 @@
 \\
 \>\AgdaKeyword{postulate}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{s00A0} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[15]%
 \>[15]\AgdaComment{-- NO-BREAK SPACE        ("\textbackslash{} " with Agda input method)}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{s2004} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[15]%
 \>[15]\AgdaComment{-- THREE-PER-EM SPACE    ("\textbackslash{};" with Agda input method)}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaPostulate{s202F} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \<[15]%
 \>[15]\AgdaComment{-- NARROW NO-BREAK SPACE ("\textbackslash{}," with Agda input method)}\<%
 \end{code}
