--- a/test/LaTeXAndHTML/succeed/Links.tex
+++ b/test/LaTeXAndHTML/succeed/Links.tex
@@ -8,11 +8,11 @@
 \begin{code}%
 \>\AgdaKeyword{data} \AgdaDatatype{ℕ} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{zero} \<[8]%
 \>[8]\AgdaSymbol{:} \AgdaDatatype{ℕ}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{suc} \<[8]%
 \>[8]\AgdaSymbol{:} \AgdaDatatype{ℕ} \AgdaSymbol{→} \AgdaDatatype{ℕ}\<%
 \end{code}
@@ -43,7 +43,7 @@ works automatically.
 \begin{code}%
 \>\AgdaKeyword{data} \AgdaDatatype{Bool} \AgdaSymbol{:} \AgdaPrimitiveType{Set} \AgdaKeyword{where}\<%
 \\
-\>[0]\AgdaIndent{2}{}\<[2]%
+\>[0]\AgdaIndent{}\<[2]%
 \>[2]\AgdaInductiveConstructor{true} \AgdaInductiveConstructor{false} \AgdaSymbol{:} \AgdaDatatype{Bool}\<%
 \end{code}
 
