--- a/test/LaTeXAndHTML/succeed/Multiline.tex
+++ b/test/LaTeXAndHTML/succeed/Multiline.tex
@@ -11,7 +11,7 @@
 \>\AgdaFunction{argh} \AgdaSymbol{=} \<[8]%
 \>[8]\AgdaString{"Hello,\textbackslash{}}\<%
 \\
-\>[0]\AgdaIndent{8}{}\<[8]%
+\>[0]\AgdaIndent{}\<[8]%
 \>[8]\AgdaString{\textbackslash{}World!"}\<%
 \end{code}
 \end{document}
